--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,6 @@ whitenoise==6.6.0
 django-cors-headers==4.3.1
 openpyxl==3.1.2
 python-dateutil==2.8.2
-django-celery-beat==2.5.0 
+django-celery-beat==2.5.0
+reportlab==4.0.4
+XlsxWriter==3.1.2 
